add allocation-free overloads for LangUtil.check() and LangUtil.checkArg()